<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BABABA"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context="ChangeTask">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangeTask"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00B945"
            android:text="@string/update"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF2222"
            android:text="@string/delete"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>