<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BABABA"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MakerTask">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Task"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00B945"
        android:text="@string/OK"
        android:textSize="18sp" />

</LinearLayout>